exports[`(.not).toHaveMovedTemporarilyStatus > using axios > .not.toHaveMovedTemporarilyStatus > fails when response have status code 302 1`] = `
<dim>expect(</intensity><red>received</color><dim>).not.toHaveMovedTemporarilyStatus()</intensity>

Expected status code to not be 302 received:
  <red>302</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 302,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": {}
}
`;

exports[`(.not).toHaveMovedTemporarilyStatus > using axios > .toHaveMovedTemporarilyStatus > fails when response have other status code 1`] = `
<dim>expect(</intensity><red>received</color><dim>).toHaveMovedTemporarilyStatus()</intensity>

Expected status code to be 302 received:
  <red>200</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 200,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": {}
}
`;

exports[`(.not).toHaveMovedTemporarilyStatus > using got > .not.toHaveMovedTemporarilyStatus > fails when response have status code 302 1`] = `
<dim>expect(</intensity><red>received</color><dim>).not.toHaveMovedTemporarilyStatus()</intensity>

Expected status code to not be 302 received:
  <red>302</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 302,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": "{}"
}
`;

exports[`(.not).toHaveMovedTemporarilyStatus > using got > .toHaveMovedTemporarilyStatus > fails when response have other status code 1`] = `
<dim>expect(</intensity><red>received</color><dim>).toHaveMovedTemporarilyStatus()</intensity>

Expected status code to be 302 received:
  <red>200</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 200,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": "{}"
}
`;
